docs/versioned_docs/version-0.19/reference/typescript/api/client.gen/README.md
[**@dagger.io/dagger**](../../README.md)

***

[@dagger.io/dagger](../../modules.md) / api/client.gen

# api/client.gen

## Enumerations

- [CacheSharingMode](enumerations/CacheSharingMode.md)
- [ChangesetMergeConflict](enumerations/ChangesetMergeConflict.md)
- [ChangesetsMergeConflict](enumerations/ChangesetsMergeConflict.md)
- [ExistsType](enumerations/ExistsType.md)
- [FileType](enumerations/FileType.md)
- [FunctionCachePolicy](enumerations/FunctionCachePolicy.md)
- [ImageLayerCompression](enumerations/ImageLayerCompression.md)
- [ImageMediaTypes](enumerations/ImageMediaTypes.md)
- [ModuleSourceExperimentalFeature](enumerations/ModuleSourceExperimentalFeature.md)
- [ModuleSourceKind](enumerations/ModuleSourceKind.md)
- [NetworkProtocol](enumerations/NetworkProtocol.md)
- [ReturnType](enumerations/ReturnType.md)
- [TypeDefKind](enumerations/TypeDefKind.md)

## Classes

- [Address](classes/Address.md)
- [Binding](classes/Binding.md)
- [CacheVolume](classes/CacheVolume.md)
- [Changeset](classes/Changeset.md)
- [Check](classes/Check.md)
- [CheckGroup](classes/CheckGroup.md)
- [Client](classes/Client.md)
- [Cloud](classes/Cloud.md)
- [Container](classes/Container.md)
- [CurrentModule](classes/CurrentModule.md)
- [Directory](classes/Directory.md)
- [Engine](classes/Engine.md)
- [EngineCache](classes/EngineCache.md)
- [EngineCacheEntry](classes/EngineCacheEntry.md)
- [EngineCacheEntrySet](classes/EngineCacheEntrySet.md)
- [EnumTypeDef](classes/EnumTypeDef.md)
- [EnumValueTypeDef](classes/EnumValueTypeDef.md)
- [Env](classes/Env.md)
- [EnvFile](classes/EnvFile.md)
- [EnvVariable](classes/EnvVariable.md)
- [Error](classes/Error.md)
- [ErrorValue](classes/ErrorValue.md)
- [FieldTypeDef](classes/FieldTypeDef.md)
- [File](classes/File.md)
- [Function\_](classes/Function.md)
- [FunctionArg](classes/FunctionArg.md)
- [FunctionCall](classes/FunctionCall.md)
- [FunctionCallArgValue](classes/FunctionCallArgValue.md)
- [GeneratedCode](classes/GeneratedCode.md)
- [Generator](classes/Generator.md)
- [GeneratorGroup](classes/GeneratorGroup.md)
- [GitRef](classes/GitRef.md)
- [GitRepository](classes/GitRepository.md)
- [Host](classes/Host.md)
- [InputTypeDef](classes/InputTypeDef.md)
- [InterfaceTypeDef](classes/InterfaceTypeDef.md)
- [JSONValue](classes/JSONValue.md)
- [Label](classes/Label.md)
- [ListTypeDef](classes/ListTypeDef.md)
- [LLM](classes/LLM.md)
- [LLMTokenUsage](classes/LLMTokenUsage.md)
- [Module\_](classes/Module.md)
- [ModuleConfigClient](classes/ModuleConfigClient.md)
- [ModuleSource](classes/ModuleSource.md)
- [ObjectTypeDef](classes/ObjectTypeDef.md)
- [Port](classes/Port.md)
- [ScalarTypeDef](classes/ScalarTypeDef.md)
- [SDKConfig](classes/SDKConfig.md)
- [SearchResult](classes/SearchResult.md)
- [SearchSubmatch](classes/SearchSubmatch.md)
- [Secret](classes/Secret.md)
- [Service](classes/Service.md)
- [Socket](classes/Socket.md)
- [SourceMap](classes/SourceMap.md)
- [Stat](classes/Stat.md)
- [Terminal](classes/Terminal.md)
- [TypeDef](classes/TypeDef.md)

## Type Aliases

- [\_\_DirectiveArgsOpts](type-aliases/DirectiveArgsOpts.md)
- [\_\_FieldArgsOpts](type-aliases/FieldArgsOpts.md)
- [\_\_TypeEnumValuesOpts](type-aliases/TypeEnumValuesOpts.md)
- [\_\_TypeFieldsOpts](type-aliases/TypeFieldsOpts.md)
- [\_\_TypeInputFieldsOpts](type-aliases/TypeInputFieldsOpts.md)
- [AddressDirectoryOpts](type-aliases/AddressDirectoryOpts.md)
- [AddressFileOpts](type-aliases/AddressFileOpts.md)
- [AddressID](type-aliases/AddressID.md)
- [BindingID](type-aliases/BindingID.md)
- [BuildArg](type-aliases/BuildArg.md)
- [CacheVolumeID](type-aliases/CacheVolumeID.md)
- [ChangesetID](type-aliases/ChangesetID.md)
- [ChangesetWithChangesetOpts](type-aliases/ChangesetWithChangesetOpts.md)
- [ChangesetWithChangesetsOpts](type-aliases/ChangesetWithChangesetsOpts.md)
- [CheckGroupID](type-aliases/CheckGroupID.md)
- [CheckID](type-aliases/CheckID.md)
- [ClientContainerOpts](type-aliases/ClientContainerOpts.md)
- [ClientEnvFileOpts](type-aliases/ClientEnvFileOpts.md)
- [ClientEnvOpts](type-aliases/ClientEnvOpts.md)
- [ClientFileOpts](type-aliases/ClientFileOpts.md)
- [ClientGitOpts](type-aliases/ClientGitOpts.md)
- [ClientHttpOpts](type-aliases/ClientHttpOpts.md)
- [ClientLlmOpts](type-aliases/ClientLlmOpts.md)
- [ClientModuleSourceOpts](type-aliases/ClientModuleSourceOpts.md)
- [ClientSecretOpts](type-aliases/ClientSecretOpts.md)
- [CloudID](type-aliases/CloudID.md)
- [ContainerAsServiceOpts](type-aliases/ContainerAsServiceOpts.md)
- [ContainerAsTarballOpts](type-aliases/ContainerAsTarballOpts.md)
- [ContainerDirectoryOpts](type-aliases/ContainerDirectoryOpts.md)
- [ContainerExistsOpts](type-aliases/ContainerExistsOpts.md)
- [ContainerExportImageOpts](type-aliases/ContainerExportImageOpts.md)
- [ContainerExportOpts](type-aliases/ContainerExportOpts.md)
- [ContainerFileOpts](type-aliases/ContainerFileOpts.md)
- [ContainerID](type-aliases/ContainerID.md)
- [ContainerImportOpts](type-aliases/ContainerImportOpts.md)
- [ContainerPublishOpts](type-aliases/ContainerPublishOpts.md)
- [ContainerStatOpts](type-aliases/ContainerStatOpts.md)
- [ContainerTerminalOpts](type-aliases/ContainerTerminalOpts.md)
- [ContainerUpOpts](type-aliases/ContainerUpOpts.md)
- [ContainerWithDefaultTerminalCmdOpts](type-aliases/ContainerWithDefaultTerminalCmdOpts.md)
- [ContainerWithDirectoryOpts](type-aliases/ContainerWithDirectoryOpts.md)
- [ContainerWithEntrypointOpts](type-aliases/ContainerWithEntrypointOpts.md)
- [ContainerWithEnvVariableOpts](type-aliases/ContainerWithEnvVariableOpts.md)
- [ContainerWithExecOpts](type-aliases/ContainerWithExecOpts.md)
- [ContainerWithExposedPortOpts](type-aliases/ContainerWithExposedPortOpts.md)
- [ContainerWithFileOpts](type-aliases/ContainerWithFileOpts.md)
- [ContainerWithFilesOpts](type-aliases/ContainerWithFilesOpts.md)
- [ContainerWithMountedCacheOpts](type-aliases/ContainerWithMountedCacheOpts.md)
- [ContainerWithMountedDirectoryOpts](type-aliases/ContainerWithMountedDirectoryOpts.md)
- [ContainerWithMountedFileOpts](type-aliases/ContainerWithMountedFileOpts.md)
- [ContainerWithMountedSecretOpts](type-aliases/ContainerWithMountedSecretOpts.md)
- [ContainerWithMountedTempOpts](type-aliases/ContainerWithMountedTempOpts.md)
- [ContainerWithNewFileOpts](type-aliases/ContainerWithNewFileOpts.md)
- [ContainerWithoutDirectoryOpts](type-aliases/ContainerWithoutDirectoryOpts.md)
- [ContainerWithoutEntrypointOpts](type-aliases/ContainerWithoutEntrypointOpts.md)
- [ContainerWithoutExposedPortOpts](type-aliases/ContainerWithoutExposedPortOpts.md)
- [ContainerWithoutFileOpts](type-aliases/ContainerWithoutFileOpts.md)
- [ContainerWithoutFilesOpts](type-aliases/ContainerWithoutFilesOpts.md)
- [ContainerWithoutMountOpts](type-aliases/ContainerWithoutMountOpts.md)
- [ContainerWithoutUnixSocketOpts](type-aliases/ContainerWithoutUnixSocketOpts.md)
- [ContainerWithSymlinkOpts](type-aliases/ContainerWithSymlinkOpts.md)
- [ContainerWithUnixSocketOpts](type-aliases/ContainerWithUnixSocketOpts.md)
- [ContainerWithWorkdirOpts](type-aliases/ContainerWithWorkdirOpts.md)
- [CurrentModuleGeneratorsOpts](type-aliases/CurrentModuleGeneratorsOpts.md)
- [CurrentModuleID](type-aliases/CurrentModuleID.md)
- [CurrentModuleWorkdirOpts](type-aliases/CurrentModuleWorkdirOpts.md)
- [DirectoryAsModuleOpts](type-aliases/DirectoryAsModuleOpts.md)
- [DirectoryAsModuleSourceOpts](type-aliases/DirectoryAsModuleSourceOpts.md)
- [DirectoryDockerBuildOpts](type-aliases/DirectoryDockerBuildOpts.md)
- [DirectoryEntriesOpts](type-aliases/DirectoryEntriesOpts.md)
- [DirectoryExistsOpts](type-aliases/DirectoryExistsOpts.md)
- [DirectoryExportOpts](type-aliases/DirectoryExportOpts.md)
- [DirectoryFilterOpts](type-aliases/DirectoryFilterOpts.md)
- [DirectoryID](type-aliases/DirectoryID.md)
- [DirectorySearchOpts](type-aliases/DirectorySearchOpts.md)
- [DirectoryStatOpts](type-aliases/DirectoryStatOpts.md)
- [DirectoryTerminalOpts](type-aliases/DirectoryTerminalOpts.md)
- [DirectoryWithDirectoryOpts](type-aliases/DirectoryWithDirectoryOpts.md)
- [DirectoryWithFileOpts](type-aliases/DirectoryWithFileOpts.md)
- [DirectoryWithFilesOpts](type-aliases/DirectoryWithFilesOpts.md)
- [DirectoryWithNewDirectoryOpts](type-aliases/DirectoryWithNewDirectoryOpts.md)
- [DirectoryWithNewFileOpts](type-aliases/DirectoryWithNewFileOpts.md)
- [EngineCacheEntryID](type-aliases/EngineCacheEntryID.md)
- [EngineCacheEntrySetID](type-aliases/EngineCacheEntrySetID.md)
- [EngineCacheEntrySetOpts](type-aliases/EngineCacheEntrySetOpts.md)
- [EngineCacheID](type-aliases/EngineCacheID.md)
- [EngineCachePruneOpts](type-aliases/EngineCachePruneOpts.md)
- [EngineID](type-aliases/EngineID.md)
- [EnumTypeDefID](type-aliases/EnumTypeDefID.md)
- [EnumValueTypeDefID](type-aliases/EnumValueTypeDefID.md)
- [EnvChecksOpts](type-aliases/EnvChecksOpts.md)
- [EnvFileGetOpts](type-aliases/EnvFileGetOpts.md)
- [EnvFileID](type-aliases/EnvFileID.md)
- [EnvFileVariablesOpts](type-aliases/EnvFileVariablesOpts.md)
- [EnvID](type-aliases/EnvID.md)
- [EnvVariableID](type-aliases/EnvVariableID.md)
- [ErrorID](type-aliases/ErrorID.md)
- [ErrorValueID](type-aliases/ErrorValueID.md)
- [FieldTypeDefID](type-aliases/FieldTypeDefID.md)
- [FileAsEnvFileOpts](type-aliases/FileAsEnvFileOpts.md)
- [FileContentsOpts](type-aliases/FileContentsOpts.md)
- [FileDigestOpts](type-aliases/FileDigestOpts.md)
- [FileExportOpts](type-aliases/FileExportOpts.md)
- [FileID](type-aliases/FileID.md)
- [FileSearchOpts](type-aliases/FileSearchOpts.md)
- [FileWithReplacedOpts](type-aliases/FileWithReplacedOpts.md)
- [float](type-aliases/float.md)
- [FunctionArgID](type-aliases/FunctionArgID.md)
- [FunctionCallArgValueID](type-aliases/FunctionCallArgValueID.md)
- [FunctionCallID](type-aliases/FunctionCallID.md)
- [FunctionID](type-aliases/FunctionID.md)
- [FunctionWithArgOpts](type-aliases/FunctionWithArgOpts.md)
- [FunctionWithCachePolicyOpts](type-aliases/FunctionWithCachePolicyOpts.md)
- [FunctionWithDeprecatedOpts](type-aliases/FunctionWithDeprecatedOpts.md)
- [GeneratedCodeID](type-aliases/GeneratedCodeID.md)
- [GeneratorGroupChangesOpts](type-aliases/GeneratorGroupChangesOpts.md)
- [GeneratorGroupID](type-aliases/GeneratorGroupID.md)
- [GeneratorID](type-aliases/GeneratorID.md)
- [GitRefID](type-aliases/GitRefID.md)
- [GitRefTreeOpts](type-aliases/GitRefTreeOpts.md)
- [GitRepositoryBranchesOpts](type-aliases/GitRepositoryBranchesOpts.md)
- [GitRepositoryID](type-aliases/GitRepositoryID.md)
- [GitRepositoryTagsOpts](type-aliases/GitRepositoryTagsOpts.md)
- [HostDirectoryOpts](type-aliases/HostDirectoryOpts.md)
- [HostFileOpts](type-aliases/HostFileOpts.md)
- [HostFindUpOpts](type-aliases/HostFindUpOpts.md)
- [HostID](type-aliases/HostID.md)
- [HostServiceOpts](type-aliases/HostServiceOpts.md)
- [HostTunnelOpts](type-aliases/HostTunnelOpts.md)
- [InputTypeDefID](type-aliases/InputTypeDefID.md)
- [InterfaceTypeDefID](type-aliases/InterfaceTypeDefID.md)
- [JSON](type-aliases/JSON.md)
- [JSONValueContentsOpts](type-aliases/JSONValueContentsOpts.md)
- [JSONValueID](type-aliases/JSONValueID.md)
- [LabelID](type-aliases/LabelID.md)
- [ListTypeDefID](type-aliases/ListTypeDefID.md)
- [LLMID](type-aliases/LLMID.md)
- [LLMTokenUsageID](type-aliases/LLMTokenUsageID.md)
- [ModuleChecksOpts](type-aliases/ModuleChecksOpts.md)
- [ModuleConfigClientID](type-aliases/ModuleConfigClientID.md)
- [ModuleGeneratorsOpts](type-aliases/ModuleGeneratorsOpts.md)
- [ModuleID](type-aliases/ModuleID.md)
- [ModuleServeOpts](type-aliases/ModuleServeOpts.md)
- [ModuleSourceID](type-aliases/ModuleSourceID.md)
- [ObjectTypeDefID](type-aliases/ObjectTypeDefID.md)
- [PipelineLabel](type-aliases/PipelineLabel.md)
- [Platform](type-aliases/Platform.md)
- [PortForward](type-aliases/PortForward.md)
- [PortID](type-aliases/PortID.md)
- [ScalarTypeDefID](type-aliases/ScalarTypeDefID.md)
- [SDKConfigID](type-aliases/SDKConfigID.md)
- [SearchResultID](type-aliases/SearchResultID.md)
- [SearchSubmatchID](type-aliases/SearchSubmatchID.md)
- [SecretID](type-aliases/SecretID.md)
- [ServiceEndpointOpts](type-aliases/ServiceEndpointOpts.md)
- [ServiceID](type-aliases/ServiceID.md)
- [ServiceStopOpts](type-aliases/ServiceStopOpts.md)
- [ServiceTerminalOpts](type-aliases/ServiceTerminalOpts.md)
- [ServiceUpOpts](type-aliases/ServiceUpOpts.md)
- [SocketID](type-aliases/SocketID.md)
- [SourceMapID](type-aliases/SourceMapID.md)
- [StatID](type-aliases/StatID.md)
- [TerminalID](type-aliases/TerminalID.md)
- [TypeDefID](type-aliases/TypeDefID.md)
- [TypeDefWithEnumMemberOpts](type-aliases/TypeDefWithEnumMemberOpts.md)
- [TypeDefWithEnumOpts](type-aliases/TypeDefWithEnumOpts.md)
- [TypeDefWithEnumValueOpts](type-aliases/TypeDefWithEnumValueOpts.md)
- [TypeDefWithFieldOpts](type-aliases/TypeDefWithFieldOpts.md)
- [TypeDefWithInterfaceOpts](type-aliases/TypeDefWithInterfaceOpts.md)
- [TypeDefWithObjectOpts](type-aliases/TypeDefWithObjectOpts.md)
- [TypeDefWithScalarOpts](type-aliases/TypeDefWithScalarOpts.md)
- [Void](type-aliases/Void.md)

## Variables

- [dag](variables/dag.md)
